<resources>
    <string name="app_name" translatable="false">Files Dispatch</string>
    <string name="display_name" translatable="false">Dispatch</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="receive">receive</string>
    <string name="send">send</string>
    <string name="cancel">Cancel</string>
    <string name="pause">Pause</string>

    <!-- Preference Titles -->
    <string name="des_folder">Destination Folder</string>
    <string name="username">Display name</string>
    <string name="default_folder">Default</string>

    <!-- permission popup -->
    <string name="open_app_settings_storage"><b>Files Dispatch</b> Can\'t run without this Permission! \nAllow the Storage Permission manually from Apps Settings</string>
    <string name="repeat_request_storage"><b>Files Dispatch</b> need Storage Access to show files in your Device</string>
    <string name="repeat_request_location"><b>Files Dispatch</b> need <i>Location Permission</i> to connect with other device</string>
    <string name="open_app_settings_location"><b>Files Dispatch</b> Can\'t connect to other devices without this Permission! \nAllow the Storage Permission manually from Apps Settings</string>

    <!-- navigation buttons-->
    <string name="connect_to_desktop">Connect to Desktop</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="invite">Invite Friends</string>
    <string name="share_files_dispatch">Share <i><b>Files Dispatch</b></i></string>
    <string name="settings">Settings</string>
    <string name="help_and_feedback">Help and Feedback</string>
    <string name="about">About</string>

    <!--main screen-->
    <string name="not_connected">Not Connected!</string>
    <string name="connect">Connect</string>
    <string name="disconnect">disconnect</string>
    <string name="add_members">Add members</string>

    <!--storage entry values-->
    <string-array name="storage_entry_values">
        <item>sd_card</item>
        <item>internal_storage</item>
    </string-array>

    <!-- storage entries-->
    <string-array name="storage_entries">
        <item>Sd Card</item>
        <item>Internal Storage</item>
    </string-array>

    <!--file Types-->
    <string-array name="FileType">
        <item>Applications</item>
        <item>videos</item>
        <item>images</item>
        <item>Audios</item>
        <item>Documents</item>
        <item>Directory</item>
    </string-array>

    <!-- Array list-->
    <string-array name="Archives">
        <item>zip</item>
        <item>rar</item>
        <item>7z</item>
        <item>iso</item>
    </string-array>
    <string-array name="Documents">
        <item>doc</item>
        <item>docx</item>
        <item>xlsx</item>
    </string-array>
    <string-array name="EBooks">
        <item>pdf</item>
        <item>txt</item>
        <item>epub</item>
    </string-array>
    <string-array name="Presentations">
        <item>ppt</item>
        <item>pptx</item>
    </string-array>

    <string name="share_invitation">this is text Invitation by Files Dispatch\n https://www.google.com</string>
    <string name="file_icon">file_icon</string>
    <string name="no_installed_apps">No Installed Apps</string>
    <string name="no_documents_found">No Documents Available</string>
    <string name="no_file_found">No File Available</string>
    <string name="no_images">No Images Available</string>
    <string name="no_audios_found">No Audios Available</string>
    <string name="no_videos_found">No Videos Available</string>
    <string name="about_us">About Us</string>
    <string name="feedback">FeedBack</string>
    <string name="remove">Remove</string>
    <string name="no_history">No History</string>
    <string name="size">Size</string>
    <string name="file_name">File_Name</string>
    <string name="file_size">File_Size</string>
    <string name="destination">Destination Storage</string>
    <string name="general">General</string>
    <string name="resume">Resume</string>
    <string name="retry">Retry</string>
</resources>
