<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/first">
        <item
            android:id="@+id/ctd"
            android:visible="false"
            android:icon="@drawable/ic_phonelink"
            android:title="@string/connect_to_desktop" />
        <item
            android:id="@+id/dm"
            android:icon="@drawable/ic_darkmode"
            android:title="@string/dark_mode"
            app:actionLayout="@layout/switch_item" />
        <item
            android:id="@+id/share_this"
            android:visible="false"
            android:icon="@drawable/ic_share"
            android:title="@string/share_files_dispatch" />
        <item
            android:id="@+id/invite"
            android:icon="@drawable/ic_invite"
            android:title="@string/invite" />
    </group>
    <group android:id="@+id/second">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_setting"
            android:title="@string/settings" />
        <item
            android:id="@+id/helpmenu"
            android:icon="@drawable/ic_help"
            android:title="@string/help_and_feedback" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_about_24"
            android:title="@string/about" />
    </group>
</menu>